sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/GeneralSettingsRevenueCloud__c.object-meta.xml
<CustomObject>
    <label>General Settings (Revenue Cloud)</label>
    <nameField>
        <label>Settings Name (Revenue Cloud)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Settings (Revenue Cloud)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>