sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/AutoPostInvoices__c.field-meta.xml
<CustomField>
    <fullName>AutoPostInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Posts Invoices when they are created using Bill Now</description>
    <label>Auto-Post Invoices</label>
    <type>Checkbox</type>
</CustomField>