sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/BillingRuleMilestone__c.field-meta.xml
<CustomField>
    <fullName>BillingRuleMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule (Milestone)</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>General Settings (Milestone)</relationshipLabel>
    <relationshipName>GeneralSettingsMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>