sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/BillingRuleOneTime__c.field-meta.xml
<CustomField>
    <fullName>BillingRuleOneTime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule (One-Time)</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>General Settings (One-Time)</relationshipLabel>
    <relationshipName>GeneralSettingsOneTime</relationshipName>
    <type>Lookup</type>
</CustomField>