sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/BillingRuleSubscription__c.field-meta.xml
<CustomField>
    <fullName>BillingRuleSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule (Subscription)</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>General Settings (Subscription)</relationshipLabel>
    <relationshipName>GeneralSettingsSubscription</relationshipName>
    <type>Lookup</type>
</CustomField>