sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/BillingRuleUsage__c.field-meta.xml
<CustomField>
    <fullName>BillingRuleUsage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule (Usage)</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>General Settings (Usage)</relationshipLabel>
    <relationshipName>GeneralSettingsUsage</relationshipName>
    <type>Lookup</type>
</CustomField>