sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/DefaultLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DefaultLegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipName>DemoSettingsRevenueCloud</relationshipName>
    <type>Lookup</type>
</CustomField>