sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/DefaultPriceBook__c.field-meta.xml
<CustomField>
    <fullName>DefaultPriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>DemoSettingsRevenueCloud</relationshipName>
    <type>Lookup</type>
</CustomField>