sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/NumberOfActivatedSettings__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActivatedSettings__c</fullName>
    <label>Number of Activated Settings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>