sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/NumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPeriods__c</fullName>
    <label>Number of Periods</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>