sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/ReferenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReferenceStartDate__c</fullName>
    <description>Determines the Start Date of Finance Books</description>
    <label>Reference Start Date</label>
    <type>Date</type>
</CustomField>