sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/RefreshRequired__c.field-meta.xml
<CustomField>
    <fullName>RefreshRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Required</label>
    <type>Checkbox</type>
</CustomField>