sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/RevRecRuleMilestone__c.field-meta.xml
<CustomField>
    <fullName>RevRecRuleMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Rec Rule (Milestone)</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>General Settings (Milestone)</relationshipLabel>
    <relationshipName>GeneralSettingsMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>