sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/RevRecRuleOneTime__c.field-meta.xml
<CustomField>
    <fullName>RevRecRuleOneTime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Rec Rule (One-Time)</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>General Settings (One-Time)</relationshipLabel>
    <relationshipName>GeneralSettingsOneTime</relationshipName>
    <type>Lookup</type>
</CustomField>