sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/RevRecRuleSubscription__c.field-meta.xml
<CustomField>
    <fullName>RevRecRuleSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Rec Rule (Subscription)</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>General Settings (Subscription)</relationshipLabel>
    <relationshipName>GeneralSettingsSubscription</relationshipName>
    <type>Lookup</type>
</CustomField>