sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/RevRecRuleUsage__c.field-meta.xml
<CustomField>
    <fullName>RevRecRuleUsage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Rec Rule (Usage)</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>General Settings (Usage)</relationshipLabel>
    <relationshipName>GeneralSettingsUsage</relationshipName>
    <type>Lookup</type>
</CustomField>