sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/TaxRuleMilestone__c.field-meta.xml
<CustomField>
    <fullName>TaxRuleMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule (Milestone)</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>General Settings (Milestone)</relationshipLabel>
    <relationshipName>GeneralSettingsMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>