sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/TaxRuleOneTime__c.field-meta.xml
<CustomField>
    <fullName>TaxRuleOneTime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule (One-Time)</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>General Settings (One-Time)</relationshipLabel>
    <relationshipName>GeneralSettingsOneTime</relationshipName>
    <type>Lookup</type>
</CustomField>