sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/TaxRuleSubscription__c.field-meta.xml
<CustomField>
    <fullName>TaxRuleSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule (Subscription)</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>General Settings (Subscription)</relationshipLabel>
    <relationshipName>GeneralSettingsSubscription</relationshipName>
    <type>Lookup</type>
</CustomField>