sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/fields/TaxRuleUsage__c.field-meta.xml
<CustomField>
    <fullName>TaxRuleUsage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule (Usage)</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>General Settings (Usage)</relationshipLabel>
    <relationshipName>GeneralSettingsUsage</relationshipName>
    <type>Lookup</type>
</CustomField>