sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/validationRules/OnlyOneActivatedSetting.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneActivatedSetting</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfActivatedSettings__c &gt; 1</errorConditionFormula>
    <errorMessage>There can only be one activated setting</errorMessage>
</ValidationRule>