sro-packages/developer-pack/main/default/objects/GeneralSettingsRevenueCloud__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activated__c</columns>
    <columns>RefreshRequired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>